--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,8 @@ h1{font-family:Calligrapher
    font-color:blue
    background-color:red
    text-align:center}
+p1,p2,p3{font-family:Calligrapher 
+   font-style:50
+   font-color:blue
+   background-color:red
+   text-align:center}
