--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 h1{font-family:Calligrapher 
    font-style:50
    font-color:blue
-   background-color:red
+   background-color:cyan
    text-align:center}
 p1,p2,p3{font-family:Calligrapher 
    font-style:50
-   font-color:blue
-   background-color:red
+   font-color:pink
+   background-color:cyan
    text-align:center}
