--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,3 @@
-h1{
-   font-family:courier;
-   font-size:55;
-   font-color:blue;
-   background-color:cyan;
-   text-align:center;
-}
-p1,p2,p3{
-   font-family:cursive;
-   font-size:70;
-   font-color:pink;
-   background-color:cyan;
-   text-align:left;
+* {
+   background-color: red;
 }
