--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
-body {
-  background-color: blue;
+h1{
+   font-family: "Lucida Console", "Courier New", monospace;
+   font-size:55px;
+   color:blue;
+   background-color:cyan;
+   text-align:center;
+}
+p1,p2,p3{
+   font-family: "Lucida Console", "Courier New", monospace;
+   font-size:70px;
+   color:pink;
+   background-color:cyan;
+   text-align:left;
 }
