--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ h1{
    background-color:cyan;
    text-align:center;
 }
-p1,p2,p3{
+p{
    font-family: "Lucida Console", "Courier New", monospace;
    font-size:70px;
    color:pink;
