--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-h1{
+body{
    font-family: "Lucida Console", "Courier New", monospace;
    font-size:55px;
    color:blue;
    background-color:cyan;
    text-align:center;
 }
-p{
+/* p{
    font-family: "Lucida Console", "Courier New", monospace;
    font-size:70px;
    color:pink;
    background-color:cyan;
    text-align:left;
-}
+} */
