--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,10 @@ body{
    background-color:cyan;
    text-align:center;
 }
-/* p{
+p{
    font-family: "Lucida Console", "Courier New", monospace;
    font-size:70px;
    color:pink;
    background-color:cyan;
    text-align:left;
-} */
+}
